# freeswitch

./: .gitignore  CMakeLists.txt  atomscat.md  build.sh
.github/workflows/: c-cpp.yml
src/mod/endpoints/mod_sofia/: mod_sofia.c
src/mod/event_handlers/mod_event_redis/: Makefile.am  mod_event_redis.c  mod_event_redis.h
src/mod/event_handlers/mod_event_redis/conf/autoload_configs/: event_redis.conf.xml
